# herdrill

./: .gitignore  README.md  herdrill-chatgpt  pyproject.toml
.github/workflows/: tests.yml
docs/: 2026-07-20-herdr-jump-design.md  2026-07-20-herdrill-design.md  2026-07-21-presentation-improvements.md
herdrill/: __init__.py  __main__.py  best.py  board.py  keymap.py  leaderboard.py  main.py  render.py  round.py  settings.py  sound.py  target.py
herdrill_chatgpt/: __init__.py  __main__.py  best.py  board.py  keycheck.py  keymap.py  main.py  ramp.py  render.py  round.py
tests/: test_best.py  test_board.py  test_keycheck.py  test_keymap.py  test_leaderboard.py  test_main.py  test_ramp.py  test_real_terminal.py  test_render.py  test_round.py  test_settings.py  test_sound.py  test_target.py
